feat: Added unit test for auth routes
