# auth/cmd/api/auth/entity.go
@@ -1,12 +1,12 @@
 package auth
 
-type registerUserPayload struct {
+type RegisterUserPayload struct {
 	Username string `json:"username" validate:"required,max=100"`
 	Email    string `json:"email" validate:"required,email,max=255"`
 	Password string `json:"password" validate:"required,min=6,max=20"`
 }
 
-type loginUserPayload struct {
+type LoginUserPayload struct {
 	Email    string `json:"email" validate:"required,email,max=255"`
 	Password string `json:"password" validate:"required,min=6,max=20"`
 }
